# TestGitHubRepo

./: README.md  pyproject.toml  version.sh
testgithubrepo/: first.py  third.py
tests/: test_version.py
